--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,8 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.google.code.gson:gson:2.8.8'
+
+//    implementation 'com.readystatesoftware.chuck:library:1.1.0'
+//    implementation 'com.readystatesoftware.chuck:library-no-op:1.1.0'
+
 }
