--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.google.code.gson:gson:2.8.8'
 
+    implementation "androidx.navigation:navigation-compose:2.6.0"
 //    implementation 'com.readystatesoftware.chuck:library:1.1.0'
 //    implementation 'com.readystatesoftware.chuck:library-no-op:1.1.0'
 
