--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,11 @@ android {
 
     defaultConfig {
         applicationId "com.example.catapp"
-        minSdk 24
+        minSdk 29
         targetSdk 33
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -25,6 +26,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -91,6 +93,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.8'
 
     implementation "androidx.navigation:navigation-compose:2.6.0"
+    implementation 'androidx.multidex:multidex:2.0.1'
 //    implementation 'com.readystatesoftware.chuck:library:1.1.0'
 //    implementation 'com.readystatesoftware.chuck:library-no-op:1.1.0'
 
