--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ plugins {
 
 android {
     namespace 'com.example.catapp'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.catapp"
         minSdk 29
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -94,6 +94,10 @@ dependencies {
 
     implementation "androidx.navigation:navigation-compose:2.6.0"
     implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'androidx.compose.animation:animation:1.6.0-alpha04'
+    implementation "androidx.room:room-runtime:2.3.0"
+    implementation "androidx.room:room-ktx:2.3.0"
+    kapt "androidx.room:room-compiler:2.3.0"
 //    implementation 'com.readystatesoftware.chuck:library:1.1.0'
 //    implementation 'com.readystatesoftware.chuck:library-no-op:1.1.0'
 
