--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,8 +81,8 @@ dependencies {
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
     // Paging
-    implementation "androidx.paging:paging-runtime-ktx:3.1.1"
-    implementation "androidx.paging:paging-compose:1.0.0-alpha18"
+    implementation "androidx.paging:paging-runtime-ktx:3.2.1"
+    implementation "androidx.paging:paging-compose:3.3.0-alpha02"
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -95,10 +95,12 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.6.0"
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.compose.animation:animation:1.6.0-alpha04'
-    implementation "androidx.room:room-runtime:2.3.0"
-    implementation "androidx.room:room-ktx:2.3.0"
-    kapt "androidx.room:room-compiler:2.3.0"
-//    implementation 'com.readystatesoftware.chuck:library:1.1.0'
-//    implementation 'com.readystatesoftware.chuck:library-no-op:1.1.0'
 
+    // Room
+    implementation "androidx.room:room-ktx:2.6.1"
+    kapt "androidx.room:room-compiler:2.6.1"
+    implementation "androidx.room:room-paging:2.6.1"
+
+    implementation "androidx.lifecycle:lifecycle-livedata:2.7.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.8.0-alpha01"
 }
